--- a/src/app/Components/manufacture/ewaste-list/ewaste-list.component.html
+++ b/src/app/Components/manufacture/ewaste-list/ewaste-list.component.html
@@ -3,78 +3,43 @@
     <div class="wrap-login100">
       <div class="form-v9">
         <div class="page-content">
-          <div class="form-v9-content" style="background-image: url('assets/img/mk3.jpg')">
+          <div class="form-v9-content">
             <form class="form-detail">
-              <h2>Buy List</h2>
-              <p></p><br>
-              <p></p><br>
-
+              <h2>Buy Waste from Recycler</h2>
               <div class="container-fluids">
                 <table class="table">
                   <thead>
                     <tr>
                       <th>Product Id</th>
                       <th>Product Name</th>
-                      <th>Manufacture Name</th>
-                      <th>Recycler ID</th>
-                      <th>Purchase</th>
+                      <th>Category</th>
+                      <th>Description</th>
+                      <th>Price</th>
+                      <th></th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td>1</td>
-                      <td>Bottle</td>
-                      <td>Family Plastics</td>
-                      <td>1001</td>
-                      <td><button>Buy</button></td>
+                    <tr *ngFor="let p of product, let i = index">
+                      <td>{{p.productId}}</td>
+                      <td>{{p.productName}}</td>
+                      <td>{{p.category}}</td>
+                      <td>{{p.description}}</td>
+                      <td>{{p.price}} ETH</td>
+                      <td>
+                        <div class="login50-form-btn">
+                          <button (click)="buy(i,p.productId)" class="login50-form-btn">
+                            Recycle
+                          </button>
+                        </div>
+                      </td>
                     </tr>
-                    <tr>
-                      <td>1</td>
-                      <td>Bottle</td>
-                      <td>Family Plastics</td>
-                      <td>1001</td>
-                      <td><button>Buy</button></td>
-                    </tr>
-                    <tr>
-                      <td>1</td>
-                      <td>Bottle</td>
-                      <td>Family Plastics</td>
-                      <td>1001</td>
-                      <td><button>Buy</button></td>
-                    </tr>
-
                   </tbody>
                 </table>
               </div>
             </form>
           </div>
         </div>
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
-        <p></p>
-        <br />
+
       </div>
     </div>
     <!-- </div> -->
