--- a/src/app/Components/recycler/recycler.component.html
+++ b/src/app/Components/recycler/recycler.component.html
@@ -2,29 +2,19 @@
   <div class="container-login100">
     <div class="wrap-login100">
       <div class="login100-pic js-tilt" data-tilt>
-        <img src="../../assets/img-01.png" alt="IMG">
+        <img src="assets/img-01.png" alt="IMG">
       </div>
-
       <div class="login100-form validate-form">
-
-
         <div class="container-login100-form-btn">
-          <button (click)="login(data)" class="login100-form-btn">
-            Register Product
+          <button routerLink="/recycler/addProductRecycle" class="login100-form-btn">
+            Add to Recycle
           </button>
         </div>
         <div class="container-login100-form-btn">
-          <button (click)="login(data)" class="login100-form-btn">
-            View Registered Product
+          <button routerLink="/recycler/viewSorted" class="login100-form-btn">
+            View Sortrd Products
           </button>
         </div>
-        <div class="container-login100-form-btn">
-          <button (click)="login(data)" class="login100-form-btn">
-            View Recycler Product
-          </button>
-        </div>
-
-
       </div>
     </div>
   </div>
