--- a/src/styles.css
+++ b/src/styles.css
@@ -354,7 +354,35 @@
   }
   
   
+    .login50-form-btn {
+    font-family: Montserrat-Bold;
+    font-size: 9px;
+    line-height: 1;
+    color: #fff;
+    text-transform: uppercase;
   
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
+    background: #57b846;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5px;
+  
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+  }
+  
+  .login50-form-btn:hover {
+    background: #333333;
+  }
   /*------------------------------------------------------------------
   [ Responsive ]*/
   
