--- a/src/app/Components/manufacture/add-product/add-product.component.html
+++ b/src/app/Components/manufacture/add-product/add-product.component.html
@@ -47,6 +47,11 @@
           </div>
         </div>
       </form>
+      <div class="container-login100-form-btn">
+        <button routerLink="/manufacture" class="login100-form-btn">
+          Back
+        </button>
+      </div>
 
 
     </form>
