--- a/src/app/Components/manufacture/ewaste-list/ewaste-list.component.html
+++ b/src/app/Components/manufacture/ewaste-list/ewaste-list.component.html
@@ -4,39 +4,44 @@
       <div class="form-v9">
         <div class="page-content">
           <div class="form-v9-content">
-            <form class="form-detail">
-              <h2>Buy Waste from Recycler</h2>
-              <div class="container-fluids">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>Product Id</th>
-                      <th>Product Name</th>
-                      <th>Category</th>
-                      <th>Description</th>
-                      <th>Price</th>
-                      <th></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let p of product, let i = index">
-                      <td>{{p.productId}}</td>
-                      <td>{{p.productName}}</td>
-                      <td>{{p.category}}</td>
-                      <td>{{p.description}}</td>
-                      <td>{{p.price}} ETH</td>
-                      <td>
-                        <div class="login50-form-btn">
-                          <button (click)="buy(i,p.productId)" class="login50-form-btn">
-                            Recycle
-                          </button>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </form>
+
+            <h2>Buy Waste from Recycler</h2>
+            <div class="container-fluids">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Product Id</th>
+                    <th>Product Name</th>
+                    <th>Category</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let p of product, let i = index">
+                    <td>{{p.productId}}</td>
+                    <td>{{p.productName}}</td>
+                    <td>{{p.category}}</td>
+                    <td>{{p.description}}</td>
+                    <td>{{p.price}} ETH</td>
+                    <td>
+                      <div class="login50-form-btn">
+                        <button *ngIf="p" (click)="buy(i,p.productId)" class="login50-form-btn">
+                          Recycle
+                        </button>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="container-login100-form-btn">
+              <button routerLink="/manufacture" class="login100-form-btn">
+                Back
+              </button>
+            </div>
+
           </div>
         </div>
 
