--- a/src/app/Components/manufacture/view-product/view-product.component.html
+++ b/src/app/Components/manufacture/view-product/view-product.component.html
@@ -4,33 +4,37 @@
       <div class="form-v9">
         <div class="page-content">
           <div class="form-v9-content">
-            <form class="form-detail">
-              <h2>View Products</h2>
-              <div class="container-fluids">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>Product Id</th>
-                      <th>Product Name</th>
-                      <th>Category</th>
-                      <th>Description</th>
-                      <th>Price</th>
-                      <!-- <th></th> -->
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let p of product">
-                      <td>{{p.productId}}</td>
-                      <td>{{p.productName}}</td>
-                      <td>{{p.category}}</td>
-                      <td>{{p.description}}</td>
-                      <td>{{p.price}} ETH</td>
-                      <!-- <td></td> -->
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </form>
+            <h2>View Products</h2>
+            <div class="container-fluids">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Product Id</th>
+                    <th>Product Name</th>
+                    <th>Category</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                    <!-- <th></th> -->
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let p of product">
+                    <td>{{p.productId}}</td>
+                    <td>{{p.productName}}</td>
+                    <td>{{p.category}}</td>
+                    <td>{{p.description}}</td>
+                    <td>{{p.price}} ETH</td>
+                    <!-- <td></td> -->
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="container-login100-form-btn">
+              <button routerLink="/manufacture" class="login100-form-btn">
+                Back
+              </button>
+            </div>
+
           </div>
         </div>
 
